--- a/Monte_Carlo_Simulation_Jin_and_Vasserman_2021.Rmd
+++ b/Monte_Carlo_Simulation_Jin_and_Vasserman_2021.Rmd
@@ -19,14 +19,12 @@ library(MASS)
 
 # Generate Data for Choice Model
 
-## メモ
-- $v_{idt} = \mathbb{E}[h_{idt}] -\frac{\gamma}{2}\mathbb{E}[h_{idt}^{2}]$の第2項は無視している
-
 First we generate data in the following procedure.
 
 1. Generate $\lambda_{imt}$. $\lambda_{imt}$ is one of the most significant variables that represents consumer's risk (observable for consumers but not econometrician)
 2. Generate choice in $t = 0$ according to the choice model. In $t = 0$, consumers have four options: the firm with and without monitoring, competitor 1 and 2.
 3. Generate realization of cost (claims count, severity and monitoring score) in $t = 0$ according to the cost model. 
+4. Generate choice in $t = 1$ based on renewal prices realized by claims and scores. Now consumers have three options: the firm, competitor 1 and 2.
 
 ## Generate $\lambda$
 
@@ -726,7 +724,8 @@ cal_v <- function(df, theta, cost_par, R, lambda){
   
   return(output)
 }
-    
+
+
 cal_choice_probability <- function(df, theta, cost_par, R, lambda){
   ## Calculate v
   v <- cal_v(df, theta, cost_par, R, lambda)
@@ -920,8 +919,42 @@ K <- 50
 df_t0 <- df %>% 
   dplyr::filter(t == 0)
 
+df_t1 <- df %>% 
+  dplyr::filter(t == 1)
+
 ## Simulate Private Risk Lambda
-sim_lambda <- gen_lambda(df_t0, cost_par, L)
+sim_lambda <- gen_lambda(df_t0, cost_par, L) %>% 
+  dplyr::select(starts_with("lambda"))
+
+sim_lambda_expand <- gen_lambda(df_t0, cost_par, L)
+
+for(k in 1:(K - 1)){
+  sim_lambda_expand <- dplyr::bind_cols(sim_lambda_expand, sim_lambda)
+}
+
+column_order_lambda <- sim_lambda_expand %>% 
+  dplyr::select(starts_with("lambda")) %>% 
+  names() %>% 
+  sort()
+
+sim_lambda_expand <- sim_lambda_expand %>% 
+  dplyr::select("i", "d", "t", "m", "f",
+                "x_1", "x_2", "x_3", "x_4", 
+                "price", "prior_firm", "choice",
+                "claims", "score", "R_s", "R_C",
+                all_of(column_order_lambda))
+
+colnames(sim_lambda_expand) <- c("i", "d", "t", "m", "f",
+                                 "x_1", "x_2", "x_3", "x_4", 
+                                 "price", "prior_firm", "choice",
+                                 "claims", "score", "R_s", "R_C",
+                                 paste(rep("lambda", L * K), 
+                                       rep(1:L, K, each = K), 
+                                       rep(1:K, L),
+                                       sep = "_"))
+
+sim_lambda <- gen_lambda(df_t0, cost_par, L) %>% 
+  dplyr::select(starts_with("lambda"))
 
 ## Calculate Certainty Equivalent for Each Draw
 ### theta_estを入れるのが正しいが挙動確認のためthetaを入れている
@@ -979,7 +1012,9 @@ sim_renewal_price <- function(df, theta, cost_par, R, lambda){
                        starts_with("claims"))
 
   ## Calculate Base R_s
-  ### Note that, for simplicity, assume that R0 is deterministic conditional on s. In reality, the spread of baseline R0 without monitoring may have subtle nonlinear effects on consumer choice, which we assume away
+  ### Note that, for simplicity, assume that R0 is deterministic conditional on s. 
+  ### In reality, the spread of baseline R0 without monitoring may have subtle 
+  ### nonlinear effects on consumer choice, which we assume away
   alpha_m0 <- theta[7:9]
   alpha_m1 <- theta[10:13]
   beta <- theta[14]
@@ -1007,6 +1042,148 @@ sim_renewal_price <- function(df, theta, cost_par, R, lambda){
   return(output)
 }
 
-tmp_score <- sim_renewal_price(df_t0, theta, cost_par, R, sim_lambda)
+#tmp_score <- sim_renewal_price(df_t0, theta, cost_par, R, sim_lambda_expand)
 
+# Calculate Choice Probability
+cal_v_modified <- function(df, theta, cost_par, R, lambda){
+ # Parameters
+  eta_f <- theta[1:4]
+  xi <- theta[5:6]
+  alpha_m0 <- theta[7:9]
+  alpha_m1 <- theta[10:13]
+  beta <- theta[14]
+  risk_aversion <- theta[15]
+  
+  # Cost Parameters
+  theta_score <- cost_par[8:11]
+  sigma_score <- cost_par[12]
+  l0 <- cost_par[13]
+  a_l <- cost_par[14]
+  
+  ## Lambda
+  lambda <- lambda
+  
+  # Price
+  price <- sim_renewal_price(df, theta, cost_par, R, lambda)
+  
+  # Generate Demand Friction
+  demand_friction <- lambda %>% 
+    dplyr::mutate_at(vars(starts_with("lambda")),
+                     funs(ifelse(d == prior_firm, 
+                                 0,  
+                                 eta_f[1] + eta_f[2]*x_1 + eta_f[3]*x_2 + eta_f[4]*x_3) 
+                          + ifelse(d == 1 & t == 0, 
+                                   xi[1] + xi[2]*log(.), 
+                                   0))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "lambda", "demand_friction"), 
+                       starts_with("lambda")) %>% 
+    dplyr::select(matches("demand_friction"))
+  
+  # Generate E_score
+  E_score <- lambda %>% 
+    dplyr::mutate_at(vars(starts_with("lambda")),
+                     funs(ifelse(t == 0 & m == 1,
+                                 exp(theta_score[1] + theta_score[2]*log(.)
+                                     + theta_score[3]*x_1 + theta_score[4]*x_2
+                                     + sigma_score^2 / 2),
+                                 0))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "lambda", "E_score"), 
+                       starts_with("lambda"))
+  
+  # Generate E_oop
+  E_oop <- lambda %>% 
+    dplyr::mutate_at(vars(starts_with("lambda")),
+                     funs(.*exp(-.)*(l0^(a_l)/(a_l - 1))*policy_limit^(-a_l + 1))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "lambda", "E_oop"), 
+                       starts_with("lambda")) %>% 
+    dplyr::select(matches("E_oop"))
+  
+  # Generate E_oop_sq
+  E_oop_sq <- lambda %>% 
+    dplyr::mutate_at(vars(starts_with("lambda")),
+                     funs(.*exp(-.)*((2 * l0^(a_l)) / ((a_l - 1) * (a_l - 1))) * policy_limit^(-a_l + 2))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "lambda", "E_oop_sq"), 
+                       starts_with("lambda")) %>% 
+    dplyr::select(matches("E_oop_sq"))
+
+  # Generate E_R_s
+  E_R_s <- E_score %>% 
+    dplyr::mutate_at(vars(starts_with("E_score")),
+                     funs(ifelse(t == 0 & m == 1,
+                                 (alpha_m1[1] + alpha_m1[2]*x_1 + alpha_m1[3]*x_2 + alpha_m1[4]*.) / beta,
+                                 (alpha_m0[1] + alpha_m0[2]*x_1 + alpha_m0[3]*x_2) / beta))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "E_score", "E_R_s"), 
+                       starts_with("E_score")) %>% 
+    dplyr::select(matches("E_R_s"))
+
+  # Generate E_R_s_sq
+  E_R_s_sq <- E_score %>% 
+    dplyr::mutate_at(vars(starts_with("E_score")),
+                     funs(ifelse(t == 0 & m == 1,
+                                 (alpha_m1[1] + alpha_m1[2]*x_1 + alpha_m1[3]*x_2 + alpha_m1[4]*.) / beta^2,
+                                 (alpha_m0[1] + alpha_m0[2]*x_1 + alpha_m0[3]*x_2) / beta^2))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "E_score", "E_R_s_sq"), 
+                       starts_with("E_score")) %>% 
+    dplyr::select(matches("E_R_s_sq"))  
+  
+  # Generate E_R_C
+  E_R_C <- lambda %>% 
+    dplyr::mutate_at(vars(starts_with("lambda")),
+                     funs(0.98 * exp(-.) + 1.2 * (1 - exp(-.)))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "lambda", "E_R_C"), 
+                       starts_with("lambda")) %>% 
+    dplyr::select(matches("E_R_C"))
+
+  # Generate E_R_C_sq
+  E_R_C_sq <- lambda %>% 
+    dplyr::mutate_at(vars(starts_with("lambda")),
+                     funs(0.98^2 * exp(-.) + 1.2^2 * (1 - exp(-.)))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "lambda", "E_R_C_sq"), 
+                       starts_with("lambda")) %>% 
+    dplyr::select(matches("E_R_C_sq"))
+  
+  # Calculate E_h
+  E_h <- - price - demand_friction - E_oop - E_R_s * E_R_C * price
+  E_h <- E_h %>% 
+    dplyr::rename_with(\(x) str_replace(x, "price", "E_h"), 
+                       starts_with("price"))
+  
+  # Calculate E_h_sq
+  E_h_sq <- price^2 + demand_friction^2 + E_oop_sq + E_R_s_sq*E_R_C_sq*price^2
+  + 2*price*demand_friction + 2*price*E_oop + 2*price*(E_R_s*E_R_C*price)
+  + 2*demand_friction*E_oop + 2*demand_friction*(E_R_s*E_R_C*price)
+  + 2*E_oop*(E_R_s*E_R_C*price)
+    
+  E_h_sq <- E_h_sq %>% 
+    dplyr::rename_with(\(x) str_replace(x, "price", "E_h_sq"), 
+                       starts_with("price"))
+  
+  # Calculate v
+  v <- (E_h - (risk_aversion / 2) * E_h_sq) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "E_h", "v"), 
+                       starts_with("E_h"))
+  
+  output <- df %>% 
+    dplyr::bind_cols(v)
+  
+  return(output)
+}
+
+
+
+cal_choice_probability_modified <- function(df, theta, cost_par, R, lambda){
+  ## Calculate v
+  v <- cal_v_modified(df, theta, cost_par, R, lambda)
+  
+  ## Calculate Choice Probability
+  output <- v %>% 
+    dplyr::group_by(i, t) %>% 
+    dplyr::mutate_at(vars(starts_with("v")),
+                     funs(exp(.) / sum(exp(.)))) %>% 
+    dplyr::ungroup() %>% 
+    dplyr::rename_with(\(x) str_replace(x, "v", "choice_probability"), 
+                       starts_with("v")) 
+}
+
+tmp_choice_prob <- cal_choice_probability_modified(df_t0, theta, cost_par, R, sim_lambda_expand)
 ```
